objects/CLT_EmailTemplateField__mdt.object
<CustomObject>
    <label>CLT EmailTemplateField</label>
    <pluralLabel>CLT EmailTemplateFields</pluralLabel>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StringToReplace__c</fullName>
        <label>String To Replace</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldWrapperName__c</fullName>
        <label>Field Wrapper Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>